--- a/src/components/projects.astro
+++ b/src/components/projects.astro
@@ -39,7 +39,7 @@ const projects: Project[] = [
 
 <section
   id="projects"
-  class="py-12 border-t border-[#ffffff10] text-[var(--white)]"
+  class="py-12 pb-24 md:pb-12 border-t border-[#ffffff10] text-[var(--white)]"
 >
   <div class="max-w-5xl mx-auto">
     <h2 class="text-lg text-[var(--sec)] mb-2 shiny-sec">My work</h2>
